--- a/6 - Implicit Grid/1-simple.html
+++ b/6 - Implicit Grid/1-simple.html
@@ -8,9 +8,9 @@
     <title>Simple</title>
 </head>
 <body>
-    <section class="grid-container">
+    <!-- <section class="grid-container">
         <div class="box"></div>
-    </section>
+    </section> -->
 
     <!-- <section class="grid-container">
         <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora, quae.</div>
