--- a/6 - Implicit Grid/minmax.html
+++ b/6 - Implicit Grid/minmax.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/minmax.css">
-    <title>Implicit Grid</title>
+    <title>minmax()</title>
 </head>
 <body>
     <section class="grid-container">
