--- a/1-welcome-grid/index.html
+++ b/1-welcome-grid/index.html
@@ -8,6 +8,7 @@
     <title>Welcome Grid</title>
 </head>
 <body>
+    <h1>CSS Grid</h1>
     <section class="grid-container">
         <!-- <article class="item item1">1</article> -->
         <!-- <article class="item item2">2</article> -->
